# spacex-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: middleware.py  rate_limit.py
backend/app/cache/: helpers.py  redis_cache.py
backend/app/clients/: spacex_client.py
backend/app/schemas/: ai.py  common.py  cores.py  dashboard.py  economics.py  emissions.py  history.py  landpads.py  launches.py  launchpads.py  notifications.py  roadster.py  rockets.py  starlink.py
backend/app/services/: ai_service.py  core_service.py  dashboard_service.py  economics_service.py  emissions_service.py  history_service.py  landing_service.py  launch_detail_service.py  launch_service.py  launchpad_service.py  notification_service.py  roadster_service.py  rocket_detail_service.py  rocket_service.py  starlink_service.py
backend/app/utils/: calculations.py  client_ip.py
backend/tests/: conftest.py  test_ai_service.py  test_api.py  test_cache.py  test_config.py  test_core_service.py  test_dashboard_service.py  test_dev_routes.py  test_economics.py  test_emissions.py  test_history_service.py  test_landing_service.py  test_launch_detail.py  test_launch_service_full.py  test_launchpad_service.py  test_middleware.py  test_notifications.py  test_rate_limit.py  test_roadster.py  test_rocket_detail.py  test_routes_full.py  test_services.py  test_spacex_client.py  test_starlink.py  test_utils.py
(+132 files in other folders)
