[project]
name = "spacex-dashboard-api"
version = "1.0.0"
description = "SpaceX Dashboard Backend API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "app/**/__init__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true
